gts-macros/tests/compile_fail/multiple_type_generics.stderr
error: struct_to_gts_schema: Multiple type generic parameters are not supported (GTS schemas assume nested segments)
  --> tests/compile_fail/multiple_type_generics.rs:11:12
   |
11 | pub struct BaseEvent<P, T> {
   |            ^^^^^^^^^
